better readme, new pic, cog button for settings, fixed weapons page spacing, added back small note.

--- a/D&D_5e/D&D_5e.css
+++ b/D&D_5e/D&D_5e.css
@@ -45,6 +45,16 @@ button[type=roll]:before {
   padding-top: 0 !important;
 }
 
+.sheet-tab9 {
+  font-family: "Pictos";
+}
+.sheet-small-note {
+  text-align: center;
+  font-family: Arial;
+  font-size: 10px;
+}
+
+
 .sheet-wrap-box {
   border: 1px solid black;
   background: white;
